adding narrative for saturday

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,58 @@ knitr::opts_chunk$set(
 )
 ```
 
-# ggcirclepack
+# ggcirclepack and beyond - highly experimental
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of ggcirclepack is to ...
+Critical moment in my extension journey started with TLP.  
+
+Message 1: you can be an extender 
+
+--
+
+Message 2: "where" aesthetics need not only be x and y.
+
+--
+
+aes(x0 = ?, y0 = ?)
+
+--
+
+And what ggplot2 actually looks at is computed for you (x and y)
+
+---
+
+
+Today I'll present on ggcirclepack. 
+
+---
+
+Background: ggplot2 grammar guide walk through (reference from data to viz gallery)
+
+--
+
+This didn't feel like powerful ggplot2 experience
+
+
+--
+
+But what if it could?
+
+---
+
+
+Here, the id of the circle isn't defined by the center, but by it's id...
+
+--
+
+Working with compute_panel(), ggols
+
+
+
+---
+
 
 ## Installation
 
@@ -47,14 +93,15 @@ filter(year == 2002) %>%
   coord_equal()
 
 last_plot() +
-  aes(fill = continent)
+  aes(fill = continent) + 
+  labs(title = "gapminder 2002 countries")
 
 last_plot() +
-  aes(area = pop) + 
+  aes(area = pop)
+
+last_plot() +
+  facet_wrap(facets = vars(continent)) + 
   geom_text_circlepack()
-
-last_plot() +
-  facet_wrap(facets = vars(continent))
 
 
 last_plot() + 
@@ -70,4 +117,59 @@ last_plot() +
 
 
 ```
+
+
+---
+
+Wish list for ggcirclepack:
+
+More computation under the hood for a count data case.  
+
+```{r}
+tidytitanic::tidy_titanic %>% 
+  head()
+```
+
+
+
+```{}
+tidytitanic::tidy_titanic() + 
+  ggplot() + 
+  aes(x = "all") + 
+  geom_polygon_circlepack(alpha = .5) + 
+  geom_text_circlepack(aes(label = afterstat(count))) + # automatically labels with count
+  aes(linetype = sex) + 
+  aes(color = age) + 
+  aes(alpha = survived) + 
+  facet_wrap(~class)
+```
+
+---
+
+Include other circlepacking algorithms.
+
+--
+
+get feedback from pack circles author!  
+
+---
+
+### Extremely highly experimental: maps and atlasses.
+
+--
+
+aes(where = ?)
+--
+aes(country = ?)
+
+aes(state = ?)
+
+aes(fips = ?) # us county codes
+
+aes(brain_segment = ?)
+
+aes(tissue = ?)
+
+
+--
 
