make status quo case clearer w better object names

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,24 +28,26 @@ circle pack is an experimental package that uses packcircles to handle circle pa
 gapminder::gapminder %>%  
   filter(continent == "Americas") %>%  
   filter(year == 2002) %>%  
-  select(country, pop) ->  
-prep  
+  select(country, pop) %>% 
+  mutate(id = row_number()) ->  
+df_w_id
 
-packcircles::circleProgressiveLayout(prep$pop,  
+packcircles::circleProgressiveLayout(df_w_id$pop,  
                                          sizetype = 'area') ->  
-pack  
+x0y0radius  
 
-pack %>%  
+x0y0radius %>%  
   packcircles::circleLayoutVertices(npoints = 50) ->  
 circle_outlines  
 
-circle_outlines %>%  
+circle_outlines %>% 
+  left_join(df_w_id) %>% 
   ggplot() +  
   aes(x = x, y = y) +  
   geom_polygon(colour = "black", alpha = 0.6) +  
   aes(group = id) +  
-  aes(fill = factor(id)) +  
-  geom_text(data = cbind(prep, pack),  
+  aes(fill = pop) +  
+  geom_text(data = cbind(df_w_id, x0y0radius),  
             aes(x, y, size = pop, label = country,  
                 group = NULL, fill = NULL)) +  
   theme(legend.position = "none") +  
@@ -53,11 +55,225 @@ circle_outlines %>%
 ```
 
 
-## Proposed UI and current behavior
+# Proposed UI
 
 ```{r example, out.width="33%", fig.show="hold", message=F}
-library(ggcirclepack)
 library(tidyverse)
+library(ggcirclepack)
+
+gapminder::gapminder %>%
+filter(year == 2002) %>%
+  ggplot() +
+  aes(id = country, area = pop) +
+  geom_polygon_circlepack(alpha = .5) + 
+  geom_text_circlepack() 
+```
+
+
+
+
+# Package functions
+
+
+## geom_circle_pack
+
+### compute
+
+```{r compute_panel_circle_pack}
+# Step 1
+#' compute_panel_circle_pack
+#'
+#' @param data
+#' @param scales
+#'
+#' @return
+#' @export
+#'
+#' @examples
+#' TBD
+compute_panel_circle_pack <- function(data, scales){
+
+  data %>%
+    mutate(id = row_number()) ->
+    data1
+
+  if(is.null(data$area)){
+
+    data1 %>%
+      mutate(area = 1) ->
+      data1
+
+  }
+
+  data1 %>%
+    pull(area) %>%
+    packcircles::circleProgressiveLayout(
+      sizetype = 'area') %>%
+    packcircles::circleLayoutVertices(npoints = 300) %>%
+    left_join(data1) #%>%
+
+}
+```
+
+### test compute
+
+```{r}
+gapminder::gapminder %>%
+filter(continent == "Americas") %>%
+  filter(year == 2002) %>%
+  # input must have required aesthetic inputs as columns
+  rename(area = pop) %>%
+  compute_panel_circle_pack() %>%
+  head()
+
+```
+
+### ggproto and geom
+
+```{r geom_circle_pack}
+StatCirclepack <- ggplot2::ggproto(`_class` = "StatCirclepack",
+                                  `_inherit` = ggplot2::Stat,
+                                  required_aes = c("id"),
+                                  compute_panel = compute_panel_circle_pack,
+                                  # setup_data = my_setup_data,
+                                  default_aes = ggplot2::aes(group = after_stat(id))
+                                  )
+
+
+#' Title
+#'
+#' @param mapping
+#' @param data
+#' @param position
+#' @param na.rm
+#' @param show.legend
+#' @param inherit.aes
+#' @param ...
+#'
+#' @return
+#' @export
+#'
+#' @examples
+#' # TBD
+geom_polygon_circlepack <- function(mapping = NULL, data = NULL,
+                           position = "identity", na.rm = FALSE,
+                           show.legend = NA,
+                           inherit.aes = TRUE, ...) {
+  ggplot2::layer(
+    stat = StatCirclepack, # proto object from Step 2
+    geom = ggplot2::GeomPolygon, # inherit other behavior
+    data = data,
+    mapping = mapping,
+    position = position,
+    show.legend = show.legend,
+    inherit.aes = inherit.aes,
+    params = list(na.rm = na.rm, ...)
+  )
+}
+```
+
+### test geom
+
+## geom_text_circlepack
+
+### compute panel
+
+```{r compute_panel_circle_pack_center}
+#' compute_panel_circle_pack
+#'
+#' @param data
+#' @param scales
+#'
+#' @return
+#' @export
+#'
+#' @examples
+#' # TBD
+compute_panel_circle_pack_center <- function(data, scales){
+
+  data ->
+    data1
+
+  if(is.null(data$area)){
+
+    data1 %>%
+      mutate(area = 1) ->
+      data1
+
+  }
+
+  data1 %>%
+    pull(area) %>%
+    packcircles::circleProgressiveLayout(
+      sizetype = 'area') %>%
+    cbind(data1) %>%
+    mutate(label = id)
+
+}
+```
+
+### test compute
+
+```{r}
+gapminder::gapminder %>%
+filter(continent == "Americas") %>%
+  filter(year == 2002) %>%
+  # input must have required aesthetic inputs as columns
+  select(area = pop, id = country) %>%
+  compute_panel_circle_pack_center() %>%
+  head()
+
+```
+
+### ggproto and geom
+
+```{r geom_text_circlepack}
+StatCirclepackcenter <- ggplot2::ggproto(`_class` = "StatCirclepackcenter",
+                                  `_inherit` = ggplot2::Stat,
+                                  required_aes = c("id"),
+                                  compute_panel = compute_panel_circle_pack_center,
+                                  # setup_data = my_setup_data,
+                                  default_aes = ggplot2::aes(group = after_stat(id),
+                                                             size = after_stat(area))
+                                  )
+
+
+#' Title
+#'
+#' @param mapping
+#' @param data
+#' @param position
+#' @param na.rm
+#' @param show.legend
+#' @param inherit.aes
+#' @param ...
+#'
+#' @return
+#' @export
+#'
+#' @examples
+#' # TBD
+geom_text_circlepack <- function(mapping = NULL, data = NULL,
+                           position = "identity", na.rm = FALSE,
+                           show.legend = NA,
+                           inherit.aes = TRUE, ...) {
+  ggplot2::layer(
+    stat = StatCirclepackcenter, # proto object from Step 2
+    geom = ggplot2::GeomText, # inherit other behavior
+    data = data,
+    mapping = mapping,
+    position = position,
+    show.legend = show.legend,
+    inherit.aes = inherit.aes,
+    params = list(na.rm = na.rm, ...)
+  )
+}
+```
+
+
+### test geom
+
+```{r}
 
 gapminder::gapminder %>%
 filter(year == 2002) %>%
@@ -92,11 +308,8 @@ last_plot() +
 last_plot() + 
   aes(area = gdpPercap) + 
   labs(title = "and per capita GDPs")
-```
 
 
-
-```{r}
 gapminder::gapminder %>%
 filter(year == 2002) %>%
   ggplot() +
@@ -107,251 +320,19 @@ filter(year == 2002) %>%
   geom_text_circlepack(aes(label = after_stat(
     paste(id, "\n",
     round(area/1000000, 1), "mil."))), lineheight = .8)
-
 ```
 
-
-
-
-# Package functions
-
-
-## geom_circle_pack
-
-```{r geom_circle_pack}
-#' compute_panel_circle_pack
-#'
-#' @param data
-#' @param scales
-#'
-#' @return
-#' @export
-#'
-#' @examples
-#' library(ggplot2)
-#' library(magrittr)
-#' library(dplyr)
-#' gapminder::gapminder %>%
-#' filter(continent == "Americas") %>%
-#'   filter(year == 2002) %>%
-#'   # input must have required aesthetic inputs as columns
-#'   rename(area = pop) %>%
-#'   compute_panel_circle_pack() %>%
-#'   head()
-#'
-#'   gapminder::gapminder %>%
-#' filter(continent == "Americas") %>%
-#'  filter(year == 2002) %>%
-#'  # input must have required aesthetic inputs as columns
-#'  rename(area = pop) %>%
-#'  compute_panel_circle_pack() %>%
-#'  ggplot() +
-#'  aes(x = x, y = y, fill = country) +
-#'  geom_polygon()
-compute_panel_circle_pack <- function(data, scales){
-
-  data %>%
-    mutate(id = row_number()) ->
-    data1
-
-  if(is.null(data$area)){
-
-    data1 %>%
-      mutate(area = 1) ->
-      data1
-
-  }
-
-  data1 %>%
-    pull(area) %>%
-    packcircles::circleProgressiveLayout(
-      sizetype = 'area') %>%
-    packcircles::circleLayoutVertices(npoints = 300) %>%
-    left_join(data1) #%>%
-
-}
-
-
-StatCirclepack <- ggplot2::ggproto(`_class` = "StatCirclepack",
-                                  `_inherit` = ggplot2::Stat,
-                                  required_aes = c("id"),
-                                  compute_panel = compute_panel_circle_pack,
-                                  # setup_data = my_setup_data,
-                                  default_aes = ggplot2::aes(group = after_stat(id))
-                                  )
-
-
-#' Title
-#'
-#' @param mapping
-#' @param data
-#' @param position
-#' @param na.rm
-#' @param show.legend
-#' @param inherit.aes
-#' @param ...
-#'
-#' @return
-#' @export
-#'
-#' @examples
-#' library(ggplot2)
-#' library(magrittr)
-#' library(dplyr)
-#' gapminder::gapminder %>%
-#' filter(year == 2002) %>%
-#'   ggplot() +
-#'   aes(id = country) +
-#'   geom_polygon_circlepack(alpha = .5, size = .002)
-#'
-#' last_plot() +
-#'   aes(fill = continent)
-#'
-#' last_plot() +
-#'   aes(area = pop)
-#'
-#' last_plot() +
-#'   aes(color = continent) +
-#'   facet_wrap(facets = vars(continent))
-geom_polygon_circlepack <- function(mapping = NULL, data = NULL,
-                           position = "identity", na.rm = FALSE,
-                           show.legend = NA,
-                           inherit.aes = TRUE, ...) {
-  ggplot2::layer(
-    stat = StatCirclepack, # proto object from Step 2
-    geom = ggplot2::GeomPolygon, # inherit other behavior
-    data = data,
-    mapping = mapping,
-    position = position,
-    show.legend = show.legend,
-    inherit.aes = inherit.aes,
-    params = list(na.rm = na.rm, ...)
-  )
-}
-```
-
-## geom_text_circlepack
-
-```{r geom_text_circlepack}
-#' compute_panel_circle_pack
-#'
-#' @param data
-#' @param scales
-#'
-#' @return
-#' @export
-#'
-#' @examples
-#' library(ggplot2)
-#' library(magrittr)
-#' library(dplyr)
-#' gapminder::gapminder %>%
-#' filter(continent == "Americas") %>%
-#'   filter(year == 2002) %>%
-#'   # input must have required aesthetic inputs as columns
-#'   rename(area = pop) %>%
-#'   compute_panel_circle_pack() %>%
-#'   head()
-#'
-#'  gapminder::gapminder %>%
-#'    filter(continent == "Americas") %>%
-#'  filter(year == 2002) %>%
-#'  # input must have required aesthetic inputs as columns
-#'  rename(area = pop) %>%
-#'  compute_panel_circle_pack() %>%
-#'  ggplot() +
-#'  aes(x = x, y = y, fill = country) +
-#'  geom_polygon()
-compute_panel_circle_pack_center <- function(data, scales){
-
-  data ->
-    data1
-
-  if(is.null(data$area)){
-
-    data1 %>%
-      mutate(area = 1) ->
-      data1
-
-  }
-
-  data1 %>%
-    pull(area) %>%
-    packcircles::circleProgressiveLayout(
-      sizetype = 'area') %>%
-    cbind(data1) %>%
-    mutate(label = id)
-
-}
-
-
-
-
-StatCirclepackcenter <- ggplot2::ggproto(`_class` = "StatCirclepackcenter",
-                                  `_inherit` = ggplot2::Stat,
-                                  required_aes = c("id"),
-                                  compute_panel = compute_panel_circle_pack_center,
-                                  # setup_data = my_setup_data,
-                                  default_aes = ggplot2::aes(group = after_stat(id),
-                                                             size = after_stat(area))
-                                  )
-
-
-#' Title
-#'
-#' @param mapping
-#' @param data
-#' @param position
-#' @param na.rm
-#' @param show.legend
-#' @param inherit.aes
-#' @param ...
-#'
-#' @return
-#' @export
-#'
-#' @examples
-#' library(ggplot2)
-#' library(magrittr)
-#' library(dplyr)
-#' gapminder::gapminder %>%
-#' filter(year == 2002) %>%
-#'   ggplot() +
-#'   aes(id = country) +
-#'   geom_text_circlepack(alpha = .5)
-#'
-#' last_plot() +
-#'   aes(fill = continent)
-#'
-#' last_plot() +
-#'   aes(area = pop)
-#'
-#' last_plot() +
-#'   facet_wrap(facets = vars(continent))
-geom_text_circlepack <- function(mapping = NULL, data = NULL,
-                           position = "identity", na.rm = FALSE,
-                           show.legend = NA,
-                           inherit.aes = TRUE, ...) {
-  ggplot2::layer(
-    stat = StatCirclepackcenter, # proto object from Step 2
-    geom = ggplot2::GeomText, # inherit other behavior
-    data = data,
-    mapping = mapping,
-    position = position,
-    show.legend = show.legend,
-    inherit.aes = inherit.aes,
-    params = list(na.rm = na.rm, ...)
-  )
-}
-```
 
 
 ```{r}
-readme2pkg::chunk_to_r(c("geom_circle_pack","geom_circle_pack_text"))
+readme2pkg::chunk_to_r(chunk_name = "compute_panel_circle_pack")
+readme2pkg::chunk_to_r(chunk_name = "geom_circle_pack")
+readme2pkg::chunk_to_r(chunk_name = "compute_panel_circle_pack_center")
+readme2pkg::chunk_to_r(chunk_name = "geom_text_circlepack")
 ```
 
 
-### Issues
+## Issues
 
 Wish list for ggcirclepack:  More computation under the hood for a count data case.  
 
@@ -372,4 +353,5 @@ tidytitanic::tidy_titanic() +
   facet_wrap(~class)
 ```
 
+Quiet the joins.
 
